# dilithium

./: .gitignore  Cargo.toml  api.zig  build.rs  build.zig  build.zig.zon  root.zig
ref/: Makefile  mem.c  mem.h  params.h  sign.c  sign.h
src/: lib.rs
